<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="settings_title">My Setting</string>
    <string name="name_label">Name</string>
    <string name="name_hint">Enter Name</string>
    <string name="dob_label">Date of Birth</string>
    <string name="email_label">Email Address</string>
    <string name="email_hint">Enter Email Address</string>
    <string name="save">Save</string>
    <string name="revert">Revert</string>
</resources>