<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10sp"
    tools:context=".FirstFragment">

    <TextView
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_settings"/>

    <TextView
        android:gravity="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_label"/>
    <EditText
        android:id="@+id/userNameInput"
        android:hint="@string/name_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />


    <TextView
        android:gravity="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dob_label"/>
   <DatePicker
       android:id="@+id/dateOfBirthInput"
       android:calendarViewShown="false"
       android:datePickerMode="spinner"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>

    <TextView
        android:gravity="start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_label"/>

    <EditText
        android:id="@+id/emailInput"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
    <Button
        android:layout_margin="10sp"
        android:padding="10sp"
        android:layout_weight="50"
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        />
    <Button
        android:layout_margin="10sp"
        android:padding="10sp"
        android:layout_weight="50"
        android:id="@+id/revertButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/revert"
        />
    </LinearLayout>
</LinearLayout>